# aiida-dummy

./: .gitignore  LICENSE  pyproject.toml  run_dummy_wf.py  setup.json  setup.py
aiida_dummy/: __init__.py
